js/js.translator/testData/incremental/invalidation/jsCodeWithConstString/lib1/test.4.kt
fun doTest() = test() + 1
